# wolfMQTT

./: .gitignore
.github/workflows/: docker-Espressif.yml
IDE/Espressif/: CMakeLists.txt  EmbeddedProject20.vgdbproj  README.md  my_private_config.h.in  sdkconfig  wolfMQTT_client.sln  wolfMQTT_client.vgdbproj
IDE/Espressif-RISCV/: CMakeLists.txt  README.md  README_my_config.md  sdkconfig  sdkconfig.old  wolfMQTT_client_RISCV.sln  wolfMQTT_client_RISCV.vgdbproj
IDE/Espressif-RISCV/components/wolfMQTT/: CMakeLists.txt  component.mk
IDE/Espressif-RISCV/components/wolfMQTT-rename/src/: mqtt_client.c
IDE/Espressif-RISCV/components/wolfMQTT-rename/wolfmqtt-rename/: mqtt_client.h
IDE/Espressif-RISCV/components/wolfMQTT/include/: README.md  user_settings.h.bak
IDE/Espressif-RISCV/components/wolfMQTT/src/: mqtt_client.c  mqtt_packet.c  mqtt_socket.c
IDE/Espressif-RISCV/components/wolfMQTT/wolfmqtt/: mqtt_client.h  mqtt_types.h  options.h
IDE/Espressif-RISCV/components/wolfssl/include/: user_settings.h
IDE/Espressif-RISCV/components/wolfssl/wolfssl/wolfcrypt/: wc_port.h
IDE/Espressif-RISCV/components/wolfssl/wolfssl/wolfcrypt/port/Espressif/: esp32-crypt.h
IDE/Espressif-RISCV/main/: CMakeLists.txt  aws.c  awsiot.h  main.c  wifi.c
IDE/Espressif-RISCV/main/examples/: mqttexample.c  mqttexample.h  mqttnet.c
IDE/Espressif/ESP-IDF/: README.md  compileAllExamples.sh
IDE/Espressif/ESP-IDF/component-manager/: INSTALL.md  NEW_README.md  idf_component.yml  wolfssl_component_publish.sh
IDE/Espressif/ESP-IDF/examples/: README.md
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/: CMakeLists.txt  README.md  sdkconfig.defaults
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/VisualGDB/: wolfssl_IDF_v5.2_ESP32.sln  wolfssl_mqtt_aws_iot_IDF_v5.1_ESP32.sln
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/components/wolfmqtt/: CMakeLists.txt
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/components/wolfssl/: CMakeLists.txt
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/components/wolfssl/include/: user_settings.h
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/main/: CMakeLists.txt  main.c  time_helper.c  wifi_connect.c
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/main/include/: main.h  wifi_connect.h
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT2/: CMakeLists.txt  README.md
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT2/components/wolfmqtt/: CMakeLists.txt
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT2/main/: CMakeLists.txt  main.c
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT2/main/include/: main.h
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/: CMakeLists.txt  README.md
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/VisualGDB/: wolfmqtt_template_IDF_v5.1_ESP32.sln  wolfmqtt_template_IDF_v5.1_ESP32.vgdbproj  wolfssl_IDF_v5.2_ESP32.sln
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/components/wolfmqtt/: CMakeLists.txt
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/components/wolfmqtt/include/: README.md
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/components/wolfssl/: CMakeLists.txt
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/components/wolfssl/include/: user_settings.h
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/main/: CMakeLists.txt  main.c
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/main/include/: main.h
IDE/Espressif/component-manager/: CMakeLists.txt  INSTALL.md  NEW_README.md  README.md  README_REGISTRY_PREPEND.md  README_STAGING_PREPEND.md  component_manifest.txt  idf_component.yml  wolfssl_component_publish.sh
IDE/Espressif/component-manager/examples/wolfmqtt_template/main/: idf_component.yml
IDE/Espressif/component-manager/include/: user_settings.h
IDE/Espressif/component-manager/lib/: idf_component-staging-gojimmypi.yml  idf_component.yml  user_settings.h
IDE/Espressif/components/wolfMQTT/: CMakeLists.txt  README.md  install_wolfMQTT.bat  install_wolfMQTT.cmd
IDE/Espressif/components/wolfMQTT/src/: mqtt_client.c  mqtt_packet.c  mqtt_socket.c
IDE/Espressif/components/wolfMQTT/wolfMQTT/: mqtt_client.h  mqtt_packet.h  mqtt_socket.h  mqtt_types.h
IDE/Espressif/components/wolfssl/: CMakeLists.txt  install_wolfssl.cmd
IDE/Espressif/components/wolfssl/include/: user_settings.h
IDE/Espressif/libs/: CMakeLists.txt  component.mk
IDE/Espressif/main/: CMakeLists.txt  aws.c  my_config.h  station_example_main.c  wifi.h
examples/: mqttexample.h
